修改了过期时间通过Json来配置

--- a/SwiftCode.BBS.API/appsettings.json
+++ b/SwiftCode.BBS.API/appsettings.json
@@ -7,8 +7,9 @@
   },
   "AllowedHosts": "*",
   "Audience": {
-    "Secret": "sdfsdfsrty45634kkhllghtdgdfss34faefadfgr", 
+    "Secret": "sdfsdfsrty45634kkhllghtdgdfss34faefadfgr",
     "Issuer": "SwiftCode.BBS",
-    "Audience": "wr"
+    "Audience": "wr",
+    "ExpireSeconds": 1000
   }
 }
